Add docker-compose support

--- a/docker/src/compose-build.yml.erb
+++ b/docker/src/compose-build.yml.erb
@@ -6,7 +6,7 @@ services:
     privileged: true
     environment:
       - DOCKER=true
-    image: runas/base:<%= package_revision %>
+    image: runas:base-<%= package_revision %>
     command: make package
     volumes:
       - <%= File.join(ENV['BUILD_RELROOT'], '..') %>:/src
