--- a/docker/src/compose-build.yml.erb
+++ b/docker/src/compose-build.yml.erb
@@ -1,10 +1,11 @@
-#version: "2"
-build:
-  privileged: true
-  environment:
-    - DOCKER=true
-  image: runas/base:<%= package_revision %>
-  command: make package
-  volumes:
-    - <%= File.join(ENV['BUILD_RELROOT'], '..') %>:/src
-  working_dir: /src
+version: "2"
+services:
+  build:
+    privileged: true
+    environment:
+      - DOCKER=true
+    image: runas/base:<%= package_revision %>
+    command: make package
+    volumes:
+      - <%= File.join(ENV['BUILD_RELROOT'], '..') %>:/src
+    working_dir: /src
